# tulipy-update

./: .gitignore  .travis.yml  CONTRIBUTING.md  MANIFEST.in  PKG-INFO  README.ipynb  README.md  appveyor.yml  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis-2.yml  codeql-analysis.yml
tulipy/: _version.py
tulipyconda.egg-info/: PKG-INFO  SOURCES.txt
