[metadata]
description-file = README.md

[egg_info]
tag_build =
tag_date = 0

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = tulipy/_version.py
versionfile_build = tulipy/_version.py
tag_prefix = v
parentdir_prefix = tulipyconda-
